flesh out operator index page
includes links to not-yet-created operator pages

--- a/documentation/operators/startwith.html
+++ b/documentation/operators/startwith.html
@@ -6,7 +6,7 @@ id: startwith
 
 <ol class="breadcrumb">
   <li><a href="{{ site.url }}/documentation/operators.html">Operators</a></li>
-  <li><a href="{{ site.url }}/documentation/operators.html#async">Asynchronous</a></li>
+  <li><a href="{{ site.url }}/documentation/operators.html#combining">Combining</a></li>
   <li class="active">StartWith</li>
 </ol>
 
