--- a/documentation/operators/and-then-when.html
+++ b/documentation/operators/and-then-when.html
@@ -18,7 +18,7 @@ id: and-then-when
    <p>
     The combination of the <span class="operator">And</span>, <span class="operator">Then</span>,
     and <span class="operator">When</span> operators behave much like the
-    <span class="operaotr">Zip</span> operator, but they do so by means of intermediate data
+    <span class="operator">Zip</span> operator, but they do so by means of intermediate data
     structures. <span class="operator">And</span> accepts two or more Observables and combines the
     emissions from each, one set at a time, into <code>Pattern</code> objects.
     <span class="operator">Then</span> operates on such <code>Pattern</code> objects, transforming
@@ -29,6 +29,7 @@ id: and-then-when
    <h4>See Also</h4>
    <ul>
     <li><a href="zip.html"><span class="operator">Zip</span></a></li>
+    <li><a href="http://www.introtorx.com/content/v1.0.10621.0/12_CombiningSequences.html#AndThenWhen"><cite>Introduction to Rx</cite>: And-Then-When</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
