--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -36,6 +36,8 @@ id: buffer
 <h4>See also:</h4>
 <ul>
   <li><a href="window.html"><span class="operator">Window</span></a></li>
+  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Buffer"><cite>Introduction to Rx</cite>: Buffer</a></li>
+  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/17_SequencesOfCoincidence.html#BufferRevisted"><cite>Introduction to Rx</cite>: Buffer revisited</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
