--- a/documentation/operators/catch.html
+++ b/documentation/operators/catch.html
@@ -38,6 +38,7 @@ id: catch
    <ul>
     <li><a href="concat.html"><span class="operator">Concat</span></a></li>
     <li><a href="retry.html"><span class="operator">Retry</span></a></li>
+    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/11_AdvancedErrorHandling.html#Catch"><cide>Introduction to Rx</cite>: Catch</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
