--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -43,6 +43,7 @@ id: concat
     <li><a href="catch.html"><span class="operator">Catch</span></a></li>
     <li><a href="merge.html"><span class="operator">Merge</span></a></li>
     <li><a href="startwith.html"><span class="operator">StartWith</span></a></li>
+    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/12_CombiningSequences.html#Concat"><cite>Introduction to Rx</cite>: Concat</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
