--- a/documentation/operators/count.html
+++ b/documentation/operators/count.html
@@ -24,6 +24,10 @@ id: count
     this error notification along without emitting an item first. If the source Observable does not
     terminate at all, <span class="operator">Count</span> will neither emit an item nor terminate.
    </p>
+   <h4>See Also:</h4>
+   <ul>
+    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Count"><cite>Introduction to Rx</cite>: Count</a></li>
+   </ul>
 
    <h2>Language-Specific Information:</h2>
 <div class="panel-group operators-by-language" id="accordion" role="tablist" aria-multiselectable="true">
