--- a/documentation/operators/refcount.html
+++ b/documentation/operators/refcount.html
@@ -36,6 +36,7 @@ id: refcount
  <li><a href="connect.html"><span class="operator">Connect</span></a></li>
  <li><a href="publish.html"><span class="operator">Publish</span></a></li>
  <li><a href="replay.html"><span class="operator">Replay</span></a></li>
+ <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/14_HotAndColdObservables.html#RefCount"><cite>Introduction to Rx</cite>: RefCount</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
