--- a/documentation/operators/replay.html
+++ b/documentation/operators/replay.html
@@ -34,6 +34,7 @@ id: replay
  <li><a href="connect.html"><span class="operator">Connect</span></a></li>
  <li><a href="publish.html"><span class="operator">Publish</span></a></li>
  <li><a href="refcount.html"><span class="operator">RefCount</span></a></li>
+ <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/14_HotAndColdObservables.html#Replay"><cite>Introduction to Rx</cite>: Replay</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
