--- a/documentation/operators/retry.html
+++ b/documentation/operators/retry.html
@@ -28,6 +28,7 @@ id: retry
    <h4>See Also</h4>
    <ul>
     <li><a href="catch.html"><span class="operator">Catch</span></a></li>
+    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/11_AdvancedErrorHandling.html#Retry"><cite>Introduction to Rx</cite>: Retry</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
