--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -31,6 +31,7 @@ id: zip
    <ul>
     <li><a href="and-then-when.html"><span class="operator">And</span>/<span class="operator">Then</span>/<span class="operator">When</span></a></li>
     <li><a href="combinelatest.html"><span class="operator">CombineLatest</span></a></li>
+    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/12_CombiningSequences.html#Zip"><cite>Introduction to Rx</cite>: Zip</a></li>
    </ul>
  
    <h2>Language-Specific Information:</h2>
