--- a/documentation/operators/max.html
+++ b/documentation/operators/max.html
@@ -24,6 +24,7 @@ id: max
    <h4>See Also:</h4>
    <ul>
     <li><a href="min.html"><span class="operator">Min</span></a></li>
+    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#MaxAndMin"><cite>Introduction to Rx</cite>: Min, Max, Sum, and Average</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
