minor corrections to From operator page

--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -185,7 +185,7 @@ Completed</pre></div>
 Rx.Observable.from(s).subscribe(
   function (x) { console.log('Next: ' + x); },
   function (err) { console.log('Error: ' + err); },
-  function () { console.log('Completed'); });<pre></div>
+  function () { console.log('Completed'); });</pre></div>
      <div class="output"><pre>
 Next: foo
 Next: window
@@ -381,7 +381,7 @@ eventEmitter.emit('data', 'baz', 'quux');</pre></div>
      <div class="output"><pre>
 Next: foo - baz, bar - quux</pre></div>
      <p>
-      <code>fromCallback</code> is found in the following distributions:
+      <code>fromEvent</code> is found in the following distributions:
      </p>
      <ul>
       <li><code>rx.async.js</code> (requires <code>rx.binding.js</code> and either <code>rx.js</code> or <code>rx.compat.js</code>)</li>
