Doc page for Range operator
plus some minor corrections to From & Interval

--- a/documentation/operators/interval.html
+++ b/documentation/operators/interval.html
@@ -24,8 +24,8 @@ id: interval
 
 <h4>See also:</h4>
 <ul>
- <li><a href="range.html"><span class="operator">Range<span></a<>/li>
- <li><a href="repeat.html"><span class="operator">Repeat<span></a<>/li>
+ <li><a href="range.html"><span class="operator">Range</span></a></li>
+ <li><a href="repeat.html"><span class="operator">Repeat</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableInterval"><cite>Introduction to Rx</cite>: Interval</a></li>
 </ul>
 
