--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -31,6 +31,7 @@ id: from
 </p>
 <h2>See Also</h2>
 <ul>
+ <li><a href="just.html"><span class="operator">Just</span></a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
