Doc and diagrams for the Start operator

--- a/documentation/operators/interval.html
+++ b/documentation/operators/interval.html
@@ -26,6 +26,7 @@ id: interval
 <ul>
  <li><a href="range.html"><span class="operator">Range</span></a></li>
  <li><a href="repeat.html"><span class="operator">Repeat</span></a></li>
+ <li><a href="timer.html"><span class="operator">Timer</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableInterval"><cite>Introduction to Rx</cite>: Interval</a></li>
 </ul>
 
