--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -37,6 +37,8 @@ id: just
 <ul>
  <li><a href="from.html"><span class="operator">From</span></a></li>
  <li><a href="repeat.html"><span class="operator">Repeat</span></a></li>
+ <li><a href="start.html"><span class="operator">Start</span></a></li>
+ <li><a href="timer.html"><span class="operator">Timer</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableReturn"><cite>Introduction to Rx</cite>: Return</a></li>
 </ul>
 
