Doc page and diagrams for Timer operator

--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -144,7 +144,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY just reurn_value %}
+  {% lang_operator RxPY just return_value %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
