Doc page for Filter operator

--- a/documentation/operators/distinct.html
+++ b/documentation/operators/distinct.html
@@ -27,7 +27,7 @@ id: distinct
    <h4>See Also:</h4>
    <ul>
     <li><a href="filter.html"><span class="operator">Filter</span></a></li>
-    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#Distinctt"><cite>Introduction to Rx</cite>: Distinct and DistinctUntilChanged</a></li>
+    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#Distinct"><cite>Introduction to Rx</cite>: Distinct and DistinctUntilChanged</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
