--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -48,7 +48,7 @@ id: filter
        For example, the following code filters a list of integers, emitting only those that are even (that is,
        where the remainder from dividing the number by two is zero):
       </p>
-      <div class="code javascript"><pre>
+      <div class="code groovy"><pre>
 numbers = Observable.from([1, 2, 3, 4, 5, 6, 7, 8, 9]);
 
 numbers.filter({ 0 == (it % 2) }).subscribe(
