Doc page & diagrams for SkipLast operator
and a couple of corrections to some other pages

--- a/documentation/operators/first.html
+++ b/documentation/operators/first.html
@@ -6,7 +6,7 @@ id: first
 
 <ol class="breadcrumb">
   <li><a href="{{ site.url }}/documentation/operators.html">Operators</a></li>
-  <li><a href="{{ site.url }}/documentation/operators.html#firsting">Firsting</a></li>
+  <li><a href="{{ site.url }}/documentation/operators.html#filtering">Filtering</a></li>
   <li class="active">First</li>
 </ol>
 
