--- a/documentation/operators/last.html
+++ b/documentation/operators/last.html
@@ -6,7 +6,7 @@ id: last
 
 <ol class="breadcrumb">
   <li><a href="{{ site.url }}/documentation/operators.html">Operators</a></li>
-  <li><a href="{{ site.url }}/documentation/operators.html#lasting">Lasting</a></li>
+  <li><a href="{{ site.url }}/documentation/operators.html#filtering">Filtering</a></li>
   <li class="active">Last</li>
 </ol>
 
