--- a/documentation/operators/skip.html
+++ b/documentation/operators/skip.html
@@ -6,7 +6,7 @@ id: skip
 
 <ol class="breadcrumb">
   <li><a href="{{ site.url }}/documentation/operators.html">Operators</a></li>
-  <li><a href="{{ site.url }}/documentation/operators.html#skiping">Skiping</a></li>
+  <li><a href="{{ site.url }}/documentation/operators.html#filtering">Filtering</a></li>
   <li class="active">Skip</li>
 </ol>
 
