--- a/documentation/operators/sum.html
+++ b/documentation/operators/sum.html
@@ -194,7 +194,7 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxScala %}
+  {% lang_operator RxScala product sum %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
