Doc page & diagrams for Materialize/Dematerialize

--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -6,7 +6,7 @@ id: do
 
 <ol class="breadcrumb">
   <li><a href="{{ site.url }}/documentation/operators.html">Operators</a></li>
-  <li><a href="{{ site.url }}/documentation/operators.html#transforming">Transforming</a></li>
+  <li><a href="{{ site.url }}/documentation/operators.html#utility">Utility</a></li>
   <li class="active">Do</li>
 </ol>
 
